@@ -16,9 +16,9 @@ define(
       "soluteAmount": "<center>Solute<br>Amount",
       "solutionConcentration": "<center>Solution<br>Concentration",
       "solutionVolume": "<center>Solution<br>Volume",
-      "units.liters": "L",
-      "units.molarity": "M",
-      "units.moles": "mol",
+      "units_liters": "L",
+      "units_molarity": "M",
+      "units_moles": "mol",
       "zero": "zero",
       "cobaltIINitrate": "Cobalt (II) nitrate",
       "cobaltChloride": "Cobalt chloride",
